--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 宠汪汪偷好友狗粮与积分
+name: 签到
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8,14 * * *'
+    - cron: '0 0 * * *' #北京时间0点运行，action会有延迟
   watch:
     types: started
   repository_dispatch:
@@ -32,12 +32,22 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【宠汪汪偷好友狗粮与积分】'
+      - name: '运行 【多功能签到】'
         run: |
-          node jd_joy_steal.js
+          node other/lightning_checkin.js
+          node other/j.mr_checkin.js
+          node other/v2ex_checkin.js
+          node other/smzdm_checkin.js
+          node other/bcs_checkin.js
+          node other/52pojie_checkin.js
         env:
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          JD_DEBUG: ${{ secrets.JD_DEBUG }}
-          JOY_HELP_FEED: ${{ secrets.JOY_HELP_FEED }}
+          FREE_MY_CLOUD_USERNAME: ${{ secrets.FREE_MY_CLOUD_USERNAME }}
+          FREE_MY_CLOUD_PASSWORD: ${{ secrets.FREE_MY_CLOUD_PASSWORD }}
+          JJ_USERNAME: ${{ secrets.JJ_USERNAME }}
+          JJ_PASSWORD: ${{ secrets.JJ_PASSWORD }}
+          V2EX_COOKIE: ${{ secrets.V2EX_COOKIE }}
+          SMZDM_COOKIE: ${{ secrets.SMZDM_COOKIE }}
+          BCS_COOKIE: ${{ secrets.BCS_COOKIE }}
+          POJIE52_COOKIE: ${{ secrets.POJIE52_COOKIE }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
