--- a/.github/workflows/shareBus.yml
+++ b/.github/workflows/shareBus.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 宠汪汪偷好友狗粮与积分
+name: 助力码随机上车🚗
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8,14 * * *'
+    - cron: '0 0 1,10,20 * *' # 12 o'clock in the evening on the 1st, 10th and 20th of each month
   watch:
     types: started
   repository_dispatch:
@@ -32,12 +32,9 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【宠汪汪偷好友狗粮与积分】'
+      - name: '运行 【助力码随机上车🚗】'
         run: |
-          node jd_joy_steal.js
+          node shareBus.js
         env:
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          JD_DEBUG: ${{ secrets.JD_DEBUG }}
-          JOY_HELP_FEED: ${{ secrets.JOY_HELP_FEED }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
