--- a/.github/workflows/xm_sport.yml
+++ b/.github/workflows/xm_sport.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 宠汪汪偷好友狗粮与积分
+name: 小米运动
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8,14 * * *'
+    - cron: '15 9 * * *' # UTC+8 17点15
   watch:
     types: started
   repository_dispatch:
@@ -32,12 +32,10 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【宠汪汪偷好友狗粮与积分】'
+      - name: '运行 【小米运动】'
         run: |
-          node jd_joy_steal.js
+          node backUp/xmSports.js
         env:
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          JD_DEBUG: ${{ secrets.JD_DEBUG }}
-          JOY_HELP_FEED: ${{ secrets.JOY_HELP_FEED }}
+          XM_LOGIN_TOKEN: ${{ secrets.XM_LOGIN_TOKEN }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
