--- a/.github/workflows/jd_bean_home.yml
+++ b/.github/workflows/jd_bean_home.yml
@@ -1,41 +1,46 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: 首页领京豆
+name: 领京豆额外奖励
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10 23 * * *' # 每天7点10分
+    - cron: '5 19 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: jd_scripts
+    types: jd_bean_home
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
-      - name: Checkout
+      - name: Checkout github_lxk0301_jd_scripts
         uses: actions/checkout@v2
+        with:
+          repository: liuning0307/lxk0301
+          ref: master
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
+        uses: actions/cache@v2
         env:
           cache-name: cache-node-modules
         with:
           path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }}
       - name: npm install
-        run: |
-          npm install
-      - name: '运行 【首页领京豆】'
-        run: |
-          node jd_bean_home.js
+        run: npm install
+      - name: '运行 【领京豆额外奖励】'
+        run: node jd_bean_home.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
