--- a/.github/workflows/jx_cfd.yml
+++ b/.github/workflows/jx_cfd.yml
@@ -1,28 +1,32 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: 京喜财富岛
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 * * * *'
-  watch:
-    types: started
-  repository_dispatch:
-    types: jd_scripts
+    workflow_dispatch:
+    schedule:
+        - cron: "0 */2 * * *"
+    watch:
+        types: [started]
+    repository_dispatch:
+        types: jx_cfd
+
 jobs:
   build:
+    env:
+      JD_COOKIE: ${{ secrets.JD_COOKIE }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        if: env.JD_COOKIE
+        run: |
+          git clone https://github.com/zsh35/jd_scripts.git ~/jd_scripts
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
+        if: env.JD_COOKIE
         with:
           node-version: ${{ matrix.node-version }}
       - name: Cache node_modules
+        if: env.JD_COOKIE
         uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
         env:
           cache-name: cache-node-modules
@@ -30,16 +34,31 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: npm install
+        if: env.JD_COOKIE
         run: |
+          cd ~/jd_scripts
+          git checkout my3
           npm install
       - name: '运行 【京喜财富岛】'
         run: |
+          cd ~/jd_scripts
           node jx_cfd.js
-          node jx_cfd_exchange.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           MARKET_COIN_TO_BEANS: ${{ secrets.MARKET_COIN_TO_BEANS }}
           MARKET_REWARD_NOTIFY: ${{ secrets.MARKET_REWARD_NOTIFY }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
+          QQ_SKEY: ${{ secrets.QQ_SKEY }}
+          QQ_MODE: ${{ secrets.QQ_MODE }}
+          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
+          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER }}        
+         
