--- a/.github/workflows/jd_sharecode_auto.yaml
+++ b/.github/workflows/jd_sharecode_auto.yaml
@@ -1,11 +1,11 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 京东互助码获取并提交
+name: 京东互助码获取且提交
 
 on:
     workflow_dispatch:
-    schedule:
+    schedule：
         - cron: "5 20 1,10,20 * *" # 每月1/10/20号凌晨四点零五分跑一次互助码自动提交
     watch:
         types: [started]
